--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -149,6 +149,8 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/folded/leboncoin</li>
+
 <li>$:/state/ShowPaletteEditor</li>
 
 <li>$:/state/tab--1963855381</li>
@@ -178,6 +180,8 @@ Error message and password prompt
 <li>dev resources</li>
 
 <li>Home</li>
+
+<li>leboncoin</li>
 
 <li>Sx</li>
 
@@ -9082,6 +9086,9 @@ Error message and password prompt
 <div created="20190108084546267" modified="20190108105745223" title="$:/SiteTitle">
 <pre>leno</pre>
 </div>
+<div created="20190109093959757" modified="20190109094005946" title="$:/state/folded/leboncoin">
+<pre>show</pre>
+</div>
 <div created="20190108085015148" modified="20190108085029019" title="$:/state/ShowPaletteEditor">
 <pre>no</pre>
 </div>
@@ -9100,7 +9107,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190108110700326" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
-<div created="20190108132731356" list="[[dev resources]] [[dev ideas]] Home" modified="20190108132731356" title="$:/StoryList">
+<div created="20190109094011226" list="[[dev resources]] leboncoin Home" modified="20190109135447164" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9116,7 +9123,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/slemoine/fond/personnel%20ou%20priv%C3%A9/tmp/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;file:///C:/slemoine/fond/personnel%20ou%20priv%C3%A9/tmp/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -9136,7 +9143,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/slemoine/fond/personnel%20ou%20priv%C3%A9/tmp/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;/C:/slemoine/fond/personnel%20ou%20priv%C3%A9/tmp/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9404,8 +9411,9 @@ https://github.com/remouk
 * Mutation testing for Java with PITest : https://automationrhapsody.com/mutation-testing-java-pitest/
 </pre>
 </div>
-<div created="20190108105358377" modified="20190108105824455" tags="home" title="Home">
+<div created="20190108105358377" modified="20190108142704392" tags="home" title="Home">
 <pre>* https://annuel.framapad.org/p/leno
+* https://github.com/lenopgm
 
 ! Messaging
 * https://mail.yahoo.com
@@ -9415,6 +9423,16 @@ https://github.com/remouk
 * https://myedenred.fr/
 * https://melchior.xcard.me
 * http://www.jenaimequetoi.fr/</pre>
+</div>
+<div created="20190109082447167" modified="20190109093922829" tags="todo" title="leboncoin">
+<pre>* petits malins / sylvana family
+* lego https://www.leboncoin.fr/recherche/?text=lego&amp;regions=18&amp;departments=44&amp;location=Nantes
+* duplo
+
+* mousse de sol
+
+Trouver lien
+Tester alertes sur e-mail jetable</pre>
 </div>
 <div created="20190108101014868" modified="20190108101155331" tags="sx" title="Sx">
 <pre>https://forum.sexworkout.net/t/comment-sont-representes-les-mouvements-de-baise-dans-notre-cerveau/468/1
