--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -173,6 +173,12 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>$:/themes/tiddlywiki/vanilla/metrics/storyright</li>
+
+<li>$:/themes/tiddlywiki/vanilla/metrics/storywidth</li>
+
+<li>$:/themes/tiddlywiki/vanilla/metrics/tiddlerwidth</li>
+
 <li>$:/view</li>
 
 <li>dev ideas</li>
@@ -183,9 +189,13 @@ Error message and password prompt
 
 <li>leboncoin</li>
 
+<li>Markups</li>
+
 <li>Sx</li>
 
 <li>Week</li>
+
+<li>youtube</li>
 
 </ul>
 </p>
@@ -9101,13 +9111,13 @@ Error message and password prompt
 <div created="20190108084833171" modified="20190108105317510" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20190108104722609" modified="20190108104727478" title="$:/state/tab/moresidebar-1850697562">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20190108104722609" modified="20190111131056976" title="$:/state/tab/moresidebar-1850697562">
+<pre>$:/core/ui/MoreSideBar/Tags</pre>
 </div>
-<div created="20190108101211875" modified="20190108110700326" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20190108101211875" modified="20190111131054064" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20190109094011226" list="[[dev resources]] leboncoin Home" modified="20190109135447164" title="$:/StoryList">
+<div created="20190111131033603" list="Markups Home" modified="20190111131130217" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9276,6 +9286,15 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20190110150026090" modified="20190110150038649" title="$:/themes/tiddlywiki/vanilla/metrics/storyright">
+<pre>770px</pre>
+</div>
+<div created="20190110145935181" modified="20190110150040346" title="$:/themes/tiddlywiki/vanilla/metrics/storywidth">
+<pre>770px</pre>
+</div>
+<div created="20190110150005292" modified="20190110150049736" title="$:/themes/tiddlywiki/vanilla/metrics/tiddlerwidth">
+<pre>700px</pre>
+</div>
 <div created="20190108084902699" modified="20190108084918227" title="$:/view">
 <pre>classic</pre>
 </div>
@@ -9394,7 +9413,7 @@ https://github.com/remouk
 ```
 </pre>
 </div>
-<div created="20190108133939395" modified="20190108134642726" tags="" title="dev resources">
+<div created="20190108133939395" modified="20190111131113707" tags="dev" title="dev resources">
 <pre>! YAML
 * https://symfony.com/legacy/doc/reference/1_3/fr/02-yaml
 * https://fr.wikipedia.org/wiki/YAML
@@ -9409,7 +9428,10 @@ https://github.com/remouk
 * What to consider when choosing colors for data visualization : https://blog.datawrapper.de/colors/
 * How Rational Clear Case Stole my Innocence and Nearly Ruined my Life : https://daedtech.com/how-rational-clear-case-stole-my-innocence-and-nearly-ruined-my-life/
 * Mutation testing for Java with PITest : https://automationrhapsody.com/mutation-testing-java-pitest/
-</pre>
+
+! Gestion d'exceptions Java &amp; streams :
+* https://www.javamex.com/tutorials/exceptions/exceptions_uncaught_handler.shtml
+* https://blog.zenika.com/2014/02/19/repenser-la-propagation-des-exceptions-avec-java-8/</pre>
 </div>
 <div created="20190108105358377" modified="20190108142704392" tags="home" title="Home">
 <pre>* https://annuel.framapad.org/p/leno
@@ -9434,6 +9456,19 @@ https://github.com/remouk
 Trouver lien
 Tester alertes sur e-mail jetable</pre>
 </div>
+<div created="20190111131151776" modified="20190111131727638" tags="markups" title="Markups">
+<pre>! Media
+* Arrêt sur Image : https://www.arretsurimages.net/
+* Disclose : https://disclose.ngo/
+* Les Crises : https://www.les-crises.fr/
+
+! Science
+* Explications Fourrier : http://www.jezzamon.com/fourier/index.html
+
+! BD
+* SMBC : https://www.smbc-comics.com/
+* xkcd : https://xkcd.com/</pre>
+</div>
 <div created="20190108101014868" modified="20190108101155331" tags="sx" title="Sx">
 <pre>https://forum.sexworkout.net/t/comment-sont-representes-les-mouvements-de-baise-dans-notre-cerveau/468/1
 
@@ -9451,6 +9486,32 @@ En gros j’avais des mini verrues sur le pubis et la base de la verge qui étai
 </div>
 <div created="20190108085325311" modified="20190108101205381" tags="todo" title="Week">
 <pre>todo</pre>
+</div>
+<div created="20190110133143078" modified="20190111102207990" tags="markups" title="youtube">
+<pre>! ''High quality''
+* CASH INVESTIGATION : https://www.youtube.com/user/cashinvestigationf2/videos
+* Thinkerview : https://www.youtube.com/user/thinkerview/videos
+* Datagueule : https://www.youtube.com/user/datagueule/videos
+* Horizon Gull : https://www.youtube.com/channel/UCGeFgMJfWclTWuPw8Ok5FUQ/videos
+* Arrêt sur Image : https://www.youtube.com/channel/UCXHWT_QoQSsdGXbqF0hAMtg/videos
+
+! '' Humour''
+* Verino : https://www.youtube.com/user/verinojpr/videos
+* Haroun : https://www.youtube.com/channel/UCKeL_a8Pu3bdt251ICPV8bA/videos
+* Dieudo : https://www.youtube.com/user/iamdieudo4/videos
+* Meurice : https://www.youtube.com/playlist?list=PL43OynbWaTMLEbdAWr-DnAfveOonmhlT1
+
+! ''Science''
+* Science4all : https://www.youtube.com/channel/UC0NCbj8CxzeCGIF6sODJ-7A/videos
+* Science Etonnante : https://www.youtube.com/user/ScienceEtonnante/videos
+* MicMath : https://www.youtube.com/user/Micmaths/videos
+* CGP Grey : https://www.youtube.com/user/CGPGrey/videos
+
+! ''Politique''
+* Demos Kratos : https://www.youtube.com/channel/UCnIGrvSrQF7uCovnIm8LCSQ/videos
+* L'HDSR : https://www.youtube.com/channel/UCAyKkx7rjXke8qSoUmAdrxw/videos
+
+* les parasites : https://www.youtube.com/channel/UCqS1gDNHEX3FgJ8dPfSuRoQ/videos</pre>
 </div>
 
 </div>
