--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -167,6 +167,8 @@ Error message and password prompt
 
 <li>$:/temp/info-plugin</li>
 
+<li>$:/temp/search</li>
+
 <li>$:/theme</li>
 
 <li>$:/themes/tiddlywiki/snowwhite</li>
@@ -184,6 +186,8 @@ Error message and password prompt
 <li>dev ideas</li>
 
 <li>dev resources</li>
+
+<li>Github repo</li>
 
 <li>Home</li>
 
@@ -9111,13 +9115,13 @@ Error message and password prompt
 <div created="20190108084833171" modified="20190108105317510" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20190108104722609" modified="20190111131056976" title="$:/state/tab/moresidebar-1850697562">
-<pre>$:/core/ui/MoreSideBar/Tags</pre>
+<div created="20190108104722609" modified="20190114084308490" title="$:/state/tab/moresidebar-1850697562">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
 <div created="20190108101211875" modified="20190111131054064" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20190111131033603" list="Markups Home" modified="20190111131130217" title="$:/StoryList">
+<div created="20190115150335383" list="Home" modified="20190115150346179" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9173,6 +9177,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20190114084246125" modified="20190114084252587" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9433,6 +9440,16 @@ https://github.com/remouk
 * https://www.javamex.com/tutorials/exceptions/exceptions_uncaught_handler.shtml
 * https://blog.zenika.com/2014/02/19/repenser-la-propagation-des-exceptions-avec-java-8/</pre>
 </div>
+<div created="20190114084328196" modified="20190114095411736" tags="git todo" title="Github repo">
+<pre>https://github.com/lenopgm/
+
+* notes
+* bulletins de paye
+* dossier appart
+* epub
+* photos ? (big)
+* useful code snippets</pre>
+</div>
 <div created="20190108105358377" modified="20190108142704392" tags="home" title="Home">
 <pre>* https://annuel.framapad.org/p/leno
 * https://github.com/lenopgm
@@ -9487,7 +9504,7 @@ En gros j’avais des mini verrues sur le pubis et la base de la verge qui étai
 <div created="20190108085325311" modified="20190108101205381" tags="todo" title="Week">
 <pre>todo</pre>
 </div>
-<div created="20190110133143078" modified="20190111102207990" tags="markups" title="youtube">
+<div created="20190110133143078" modified="20190115094711097" tags="markups" title="youtube">
 <pre>! ''High quality''
 * CASH INVESTIGATION : https://www.youtube.com/user/cashinvestigationf2/videos
 * Thinkerview : https://www.youtube.com/user/thinkerview/videos
@@ -9509,9 +9526,15 @@ En gros j’avais des mini verrues sur le pubis et la base de la verge qui étai
 
 ! ''Politique''
 * Demos Kratos : https://www.youtube.com/channel/UCnIGrvSrQF7uCovnIm8LCSQ/videos
+* Trouble Fait : https://www.youtube.com/channel/UCynFUJ4zUVuh3GX7bABTjGQ/videos
 * L'HDSR : https://www.youtube.com/channel/UCAyKkx7rjXke8qSoUmAdrxw/videos
 
-* les parasites : https://www.youtube.com/channel/UCqS1gDNHEX3FgJ8dPfSuRoQ/videos</pre>
+! Divertissement
+* les parasites : https://www.youtube.com/channel/UCqS1gDNHEX3FgJ8dPfSuRoQ/videos
+* JM Corda : https://www.youtube.com/channel/UCax-jgcz74SM3nb19UX_S9g/videos
+* Raptor : https://www.youtube.com/channel/UC_i-uMpN1lEyuoUGDq-dajQ/videos
+* Raptor live : https://www.youtube.com/channel/UCXwyeDdBEaLmrndrY8q_H4Q/videos
+</pre>
 </div>
 
 </div>
