--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -195,6 +195,10 @@ Error message and password prompt
 
 <li>Markups</li>
 
+<li>Or</li>
+
+<li>Resilience</li>
+
 <li>Sx</li>
 
 <li>Week</li>
@@ -9121,7 +9125,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190111131054064" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20190115150335383" list="Home" modified="20190115150346179" title="$:/StoryList">
+<div created="20190118083701301" list="Week Resilience Or leboncoin [[Github repo]] [[dev resources]] [[dev ideas]] Markups Sx youtube Home" modified="20190118092815647" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9473,7 +9477,7 @@ https://github.com/remouk
 Trouver lien
 Tester alertes sur e-mail jetable</pre>
 </div>
-<div created="20190111131151776" modified="20190111131727638" tags="markups" title="Markups">
+<div created="20190111131151776" modified="20190118101833335" tags="markups" title="Markups">
 <pre>! Media
 * Arrêt sur Image : https://www.arretsurimages.net/
 * Disclose : https://disclose.ngo/
@@ -9481,10 +9485,67 @@ Tester alertes sur e-mail jetable</pre>
 
 ! Science
 * Explications Fourrier : http://www.jezzamon.com/fourier/index.html
+* Hacking Social : https://www.hacking-social.com/
 
 ! BD
 * SMBC : https://www.smbc-comics.com/
 * xkcd : https://xkcd.com/</pre>
+</div>
+<div created="20190116110303013" modified="20190116132053111" tags="gold" title="Or">
+<pre>* https://www.aucoffre.com/pieces/napoleon/napoleon-20-francs/produits-en-vente-1
+* https://www.pieces-or.com/1-acheter-piece-boursable-or-Napoleon-20-Francs.html
+NB : Nous vous adresserons un devis séparé pour la livraison. Vous pouvez aussi obtenir une évaluation immédiate aux heures ouvrées en appelant un conseiller au :
+01 42 12 80 84.</pre>
+</div>
+<div created="20190115164338542" modified="20190116083632879" tags="todo prep" title="Resilience">
+<pre>* or physique https://www.resilience-urbaine.com/survivalisme-resilience/or-argent-stocker-metaux-precieux/
+* armement
+* https://www.resilience-urbaine.com/materiel/test-filtre-a-eau-big-berkey/
+* stock alimentaire
+# https://www.resilience-urbaine.com/survie-urbaine/les-produits-a-stocker-survivre-crise/
+# https://www.lds.org/topics/food-storage/longer-term-food-supply?lang=fra&amp;old=true
+# http://survivez.over-blog.com/2015/11/reserves-alimentaires-pourquoi-et-que-stocker.html
+- Le sel, le sucre et l'huile ne se périment pas .
+- Les produits secs et/ou déshydratés comme les biscottes,les pâtes,les noix, le riz, les cacahuètes, la semoule, les haricots blancs, le quinoa, la purée en flocons, le lait en poudre, le café, les sachets de soupe ,etc. peuvent se conserver plusieurs années après la DLC.
+- Les boîtes de conserves peuvent aussi se conserver plusieurs années après la DLC si elles ne sont pas gonflées ou cabossées
+- quinoa( pour les protéines)
+* misc rare stuff : toothbrush, ...?
+* médicaments :
+# claritine
+# ventoline ?
+* cigaretets
+* Produits de dératisation
+* Bougies &amp; lanternes, lampes torches
+* Savon &amp; lessive, dentifrice, produits d’hygiène quotidienne
+* Eau de javel et produits désinfectants
+* Briquets &amp; allumettes
+* Huile végétale &amp; vinaigre
+* bicarbonate de soude
+* filtre à eau https://www.resilience-urbaine.com/materiel/test-filtre-a-eau-big-berkey/
+* filtres à café ou à thé sont très utiles pour le filtrage de l’eau.  Stockez-en une centaine
+* alcool sert pour la cuisine, les soins médicaux, fait un excellent combustible dans les cocktails et a une valeur de troc élevée. Stockez une vingtaine de litre de vodka sans marque
+
+https://www.amazon.fr/gp/registry/wishlist/2OVN57DIUA0JG/ref=as_li_ss_tl?ie=UTF8&amp;linkCode=sl2&amp;tag=cvru-21&amp;linkId=48c62c6c95bd2a56720ae8cc685c5920&amp;language=fr_FR
+
+https://www.amazon.fr/dp/B01MA6KOL3/?coliid=I1TKPBF5N9OKP7&amp;colid=2OVN57DIUA0JG&amp;psc=0&amp;ref_=lv_vv_lig_dp_it
+
+https://www.amazon.fr/dp/B01ANM0PQS/?coliid=IDO63CHDQ50XO&amp;colid=2OVN57DIUA0JG&amp;psc=1&amp;ref_=lv_vv_lig_dp_it
+
+https://www.amazon.fr/dp/B0791WMFPN/?coliid=I25WOQRU2E2A2K&amp;colid=2OVN57DIUA0JG&amp;psc=0&amp;ref_=lv_vv_lig_dp_it
+
+https://www.amazon.fr/dp/B07BMPQ5GC/?coliid=I6OHOR28IVCIA&amp;colid=2OVN57DIUA0JG&amp;psc=0&amp;ref_=lv_vv_lig_dp_it
+
+https://www.amazon.fr/dp/B0061G5B10/?coliid=I2KRCH5QOQ49CK&amp;colid=2OVN57DIUA0JG&amp;psc=0&amp;ref_=lv_vv_lig_dp_it
+
+https://www.amazon.fr/dp/B01HRRKBIE/?coliid=IJN948OHJU4MV&amp;colid=2OVN57DIUA0JG&amp;psc=0&amp;ref_=lv_vv_lig_dp_it
+
+https://www.amazon.fr/dp/B00ISYLTI2/?coliid=I2GSQXHMIGYDC1&amp;colid=2OVN57DIUA0JG&amp;psc=1&amp;ref_=lv_vv_lig_dp_it
+
+https://www.amazon.fr/dp/B0002YPZKY/?coliid=ID6MPPGRO262T&amp;colid=2OVN57DIUA0JG&amp;psc=0&amp;ref_=lv_vv_lig_dp_it
+
+https://www.amazon.fr/dp/B004T9WRJK/?coliid=IWKZ281GVG30I&amp;colid=2OVN57DIUA0JG&amp;psc=1&amp;ref_=lv_vv_lig_dp_it
+
+</pre>
 </div>
 <div created="20190108101014868" modified="20190108101155331" tags="sx" title="Sx">
 <pre>https://forum.sexworkout.net/t/comment-sont-representes-les-mouvements-de-baise-dans-notre-cerveau/468/1
@@ -9501,16 +9562,34 @@ A 21 ans j’ai choppé un molluscum contagiosum en couchant avec une fille renc
 
 En gros j’avais des mini verrues sur le pubis et la base de la verge qui étaient très inesthétiques et contagieuses pour mes futures partenaires. A l’époque mon père à qui je m’était confié a été hyper empathique, il m’a amené chez le dermato qui m’a grillé toutes les verrues à l’azote liquide. Il a fallu deux séances intenses pour tout faire disparaitre et que ça ne revienne plus. J’en rigole aujourd’hui mais ce fut assez douloureux.</pre>
 </div>
-<div created="20190108085325311" modified="20190108101205381" tags="todo" title="Week">
-<pre>todo</pre>
+<div created="20190108085325311" modified="20190118161350198" tags="todo" title="Week">
+<pre>todo
+
+! Flow
+* https://www.hacking-social.com/2015/03/03/le-bonheur-nest-pas-celui-quon-nous-vend-la-preuve-par-le-flow/
+* https://www.hacking-social.com/2018/09/03/fl1-donner-des-sens-a-la-vie-la-piste-du-flow/
+
+https://www.hacking-social.com/2018/07/28/pdf-la-pleine-conscience-de-la-mort/
+
+* https://lesphilogynes.com/comment-devenir-philogyne/
+* https://www.hacking-social.com/page/2/
+* https://www.hacking-social.com/2015/05/28/lhomme-formate-manipulations-commerciales-mediatiques-et-professionnelles/
+* https://www.hacking-social.com/2015/03/03/le-bonheur-nest-pas-celui-quon-nous-vend-la-preuve-par-le-flow/
+* https://www.hacking-social.com/2018/09/03/fl1-donner-des-sens-a-la-vie-la-piste-du-flow/
+* https://www.hacking-social.com/2018/07/28/pdf-la-pleine-conscience-de-la-mort/
+* https://fr.wikipedia.org/wiki/Jordan_Peterson
+* https://www.ebooksgratuits.com/ebooks.php?id_categorie=1&amp;id_genre=1&amp;id_auteur=129
+* https://fr.wikipedia.org/wiki/Affaire_des_poisons
+</pre>
 </div>
-<div created="20190110133143078" modified="20190115094711097" tags="markups" title="youtube">
+<div created="20190110133143078" modified="20190118093032346" tags="markups" title="youtube">
 <pre>! ''High quality''
 * CASH INVESTIGATION : https://www.youtube.com/user/cashinvestigationf2/videos
 * Thinkerview : https://www.youtube.com/user/thinkerview/videos
 * Datagueule : https://www.youtube.com/user/datagueule/videos
 * Horizon Gull : https://www.youtube.com/channel/UCGeFgMJfWclTWuPw8Ok5FUQ/videos
 * Arrêt sur Image : https://www.youtube.com/channel/UCXHWT_QoQSsdGXbqF0hAMtg/videos
+* Grand Angle : https://www.youtube.com/channel/UCWtD8JN9hkxL5TJL_ktaNZA/videos
 
 ! '' Humour''
 * Verino : https://www.youtube.com/user/verinojpr/videos
@@ -9534,6 +9613,7 @@ En gros j’avais des mini verrues sur le pubis et la base de la verge qui étai
 * JM Corda : https://www.youtube.com/channel/UCax-jgcz74SM3nb19UX_S9g/videos
 * Raptor : https://www.youtube.com/channel/UC_i-uMpN1lEyuoUGDq-dajQ/videos
 * Raptor live : https://www.youtube.com/channel/UCXwyeDdBEaLmrndrY8q_H4Q/videos
+* Philogynes : https://www.youtube.com/channel/UCBVb9MG9nXh0XMee6k44A3A/videos
 </pre>
 </div>
 
