--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -187,6 +187,8 @@ Error message and password prompt
 
 <li>dev resources</li>
 
+<li>File Sorter</li>
+
 <li>Github repo</li>
 
 <li>Home</li>
@@ -9125,7 +9127,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190111131054064" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20190118083701301" list="Week Resilience Or leboncoin [[Github repo]] [[dev resources]] [[dev ideas]] Markups Sx youtube Home" modified="20190118092815647" title="$:/StoryList">
+<div list="[[File Sorter]] Home" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9141,7 +9143,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/slemoine/fond/personnel%20ou%20priv%C3%A9/tmp/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;file:///C:/Julia/Samuel/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -9161,7 +9163,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/slemoine/fond/personnel%20ou%20priv%C3%A9/tmp/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;/C:/Julia/Samuel/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9169,7 +9171,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;null&quot;
+            &quot;text&quot;: &quot;file://&quot;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
@@ -9182,8 +9184,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20190114084252587" title="$:/temp/search">
-<pre></pre>
+<div created="20190114084246125" modified="20190119173753609" title="$:/temp/search">
+<pre>File Sorter</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9443,6 +9445,23 @@ https://github.com/remouk
 ! Gestion d'exceptions Java &amp; streams :
 * https://www.javamex.com/tutorials/exceptions/exceptions_uncaught_handler.shtml
 * https://blog.zenika.com/2014/02/19/repenser-la-propagation-des-exceptions-avec-java-8/</pre>
+</div>
+<div created="20190119173755790" modified="20190119174358217" tags="" title="File Sorter">
+<pre>```
+video
+  films
+  shorts
+  docu
+e-books
+  romans
+jeux
+  emulation
+  pc
+```
+
+* enfant -&gt; age
+* video/films/oeuvre/bd
+</pre>
 </div>
 <div created="20190114084328196" modified="20190114095411736" tags="git todo" title="Github repo">
 <pre>https://github.com/lenopgm/
