--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9121,13 +9121,13 @@ Error message and password prompt
 <div created="20190108084833171" modified="20190108105317510" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20190108104722609" modified="20190114084308490" title="$:/state/tab/moresidebar-1850697562">
+<div created="20190108104722609" modified="20190121080917232" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
 <div created="20190108101211875" modified="20190111131054064" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div list="[[File Sorter]] Home" title="$:/StoryList">
+<div created="20190123085001847" list="youtube Home" modified="20190123085001847" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9143,7 +9143,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///C:/Julia/Samuel/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;file:///C:/slemoine/fond/personnel%20ou%20priv%C3%A9/tmp/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -9163,7 +9163,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/C:/Julia/Samuel/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;/C:/slemoine/fond/personnel%20ou%20priv%C3%A9/tmp/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9171,7 +9171,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;file://&quot;
+            &quot;text&quot;: &quot;null&quot;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
@@ -9601,14 +9601,19 @@ https://www.hacking-social.com/2018/07/28/pdf-la-pleine-conscience-de-la-mort/
 * https://fr.wikipedia.org/wiki/Affaire_des_poisons
 </pre>
 </div>
-<div created="20190110133143078" modified="20190118093032346" tags="markups" title="youtube">
-<pre>! ''High quality''
+<div created="20190110133143078" modified="20190123163058924" tags="markups" title="youtube">
+<pre>* inside Jamel Comedy club :  https://www.youtube.com/results?search_query=inside+jamel+comedy+club
+* l'émifion : https://www.youtube.com/results?search_query=l%27%C3%A9mifion
+
+! ''High quality''
+* L'espace des sciences : https://www.youtube.com/user/Espacedessciences/videos
 * CASH INVESTIGATION : https://www.youtube.com/user/cashinvestigationf2/videos
 * Thinkerview : https://www.youtube.com/user/thinkerview/videos
 * Datagueule : https://www.youtube.com/user/datagueule/videos
 * Horizon Gull : https://www.youtube.com/channel/UCGeFgMJfWclTWuPw8Ok5FUQ/videos
 * Arrêt sur Image : https://www.youtube.com/channel/UCXHWT_QoQSsdGXbqF0hAMtg/videos
 * Grand Angle : https://www.youtube.com/channel/UCWtD8JN9hkxL5TJL_ktaNZA/videos
+* Le Réveilleur : https://www.youtube.com/channel/UC1EacOJoqsKaYxaDomTCTEQ/videos
 
 ! '' Humour''
 * Verino : https://www.youtube.com/user/verinojpr/videos
@@ -9626,6 +9631,10 @@ https://www.hacking-social.com/2018/07/28/pdf-la-pleine-conscience-de-la-mort/
 * Demos Kratos : https://www.youtube.com/channel/UCnIGrvSrQF7uCovnIm8LCSQ/videos
 * Trouble Fait : https://www.youtube.com/channel/UCynFUJ4zUVuh3GX7bABTjGQ/videos
 * L'HDSR : https://www.youtube.com/channel/UCAyKkx7rjXke8qSoUmAdrxw/videos
+
+! ''Media''
+* Fil d'Actu : https://www.youtube.com/channel/UC9hHeywcPBnLglqnQRaNShQ/videos
+* Bonjour Tristesse : https://www.youtube.com/channel/UCAFQjCZo5okIPkHUQlBZM-g/videos
 
 ! Divertissement
 * les parasites : https://www.youtube.com/channel/UCqS1gDNHEX3FgJ8dPfSuRoQ/videos
