--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9127,7 +9127,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190111131054064" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20190123085001847" list="youtube Home" modified="20190123085001847" title="$:/StoryList">
+<div created="20190123085001847" list="Week [[File Sorter]] youtube Home" modified="20190124134104221" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9184,8 +9184,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20190119173753609" title="$:/temp/search">
-<pre>File Sorter</pre>
+<div created="20190114084246125" modified="20190124154856659" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9446,7 +9446,7 @@ https://github.com/remouk
 * https://www.javamex.com/tutorials/exceptions/exceptions_uncaught_handler.shtml
 * https://blog.zenika.com/2014/02/19/repenser-la-propagation-des-exceptions-avec-java-8/</pre>
 </div>
-<div created="20190119173755790" modified="20190119174358217" tags="" title="File Sorter">
+<div created="20190119173755790" modified="20190123171606917" tags="" title="File Sorter">
 <pre>```
 video
   films
@@ -9455,8 +9455,10 @@ video
 e-books
   romans
 jeux
-  emulation
   pc
+  emulation
+  jdr
+  société
 ```
 
 * enfant -&gt; age
@@ -9581,8 +9583,10 @@ A 21 ans j’ai choppé un molluscum contagiosum en couchant avec une fille renc
 
 En gros j’avais des mini verrues sur le pubis et la base de la verge qui étaient très inesthétiques et contagieuses pour mes futures partenaires. A l’époque mon père à qui je m’était confié a été hyper empathique, il m’a amené chez le dermato qui m’a grillé toutes les verrues à l’azote liquide. Il a fallu deux séances intenses pour tout faire disparaitre et que ça ne revienne plus. J’en rigole aujourd’hui mais ce fut assez douloureux.</pre>
 </div>
-<div created="20190108085325311" modified="20190118161350198" tags="todo" title="Week">
-<pre>todo
+<div created="20190108085325311" modified="20190124154927825" tags="todo" title="Week">
+<pre>* todo
+* http://catavatar.ml/
+* Tucker &amp; Dale vs. Evil
 
 ! Flow
 * https://www.hacking-social.com/2015/03/03/le-bonheur-nest-pas-celui-quon-nous-vend-la-preuve-par-le-flow/
