--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -199,9 +199,13 @@ Error message and password prompt
 
 <li>Or</li>
 
+<li>pw</li>
+
 <li>Resilience</li>
 
 <li>Sx</li>
+
+<li>Todo</li>
 
 <li>Week</li>
 
@@ -9127,7 +9131,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190111131054064" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20190123085001847" list="Week [[File Sorter]] youtube Home" modified="20190124134104221" title="$:/StoryList">
+<div list="Todo pw Home" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9475,7 +9479,7 @@ jeux
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20190108105358377" modified="20190108142704392" tags="home" title="Home">
+<div created="20190108105358377" modified="20190130143729998" tags="home" title="Home">
 <pre>* https://annuel.framapad.org/p/leno
 * https://github.com/lenopgm
 
@@ -9486,7 +9490,17 @@ jeux
 ! Food
 * https://myedenred.fr/
 * https://melchior.xcard.me
-* http://www.jenaimequetoi.fr/</pre>
+* http://www.jenaimequetoi.fr/
+
+! Eco
+* https://toogoodtogo.fr/fr
+* https://laffairedusiecle.net/
+* https://riendeneuf.org/
+* http://www.sorteztoutvert.fr/
+* https://www.boutiquezerodechet.com/
+* https://ecoblabla.com/
+
+racloir d'oreille / oriculi / cure-oreill https://www.boutiquezerodechet.com/salle-de-bain-zero-dechet/179-oriculi.html</pre>
 </div>
 <div created="20190109082447167" modified="20190109093922829" tags="todo" title="leboncoin">
 <pre>* petits malins / sylvana family
@@ -9517,6 +9531,54 @@ Tester alertes sur e-mail jetable</pre>
 * https://www.pieces-or.com/1-acheter-piece-boursable-or-Napoleon-20-Francs.html
 NB : Nous vous adresserons un devis séparé pour la livraison. Vous pouvez aussi obtenir une évaluation immédiate aux heures ouvrées en appelant un conseiller au :
 01 42 12 80 84.</pre>
+</div>
+<div created="20190130144059269" modified="20190130144212487" tags="pw" title="pw">
+<pre>
+```
+impots.gouv.fr =&gt; 1200125072181 / i 5/17
+moncompteactivite.gouv.fr =&gt; 184014410977526 M12/18    cf https://intra.ausy.fr/publish/universite/Guide%20d'utilisation%20Consultant.pdf
+gog.com =&gt; 3/17 gog13.o.osef@xoxy.net (aussi 12/18 gog.leno.osef@xoxy.net  mais inutile)
+cardmarket.com =&gt; 6/18 slemoine cardmarket.s.lemoine@xoxy.com
+paypal =&gt; 8/17 ebay.s.lemoine@xoxy.net
+ebay =&gt; 3/18 ebay.s.lemoine@xoxy.net
+illicado =&gt; 1/18 illicado.s.lemoine@xoxy.net
+amazon =&gt; 1/14 amazon.s.lemoine@xoxy.net
+intra.ausy.fr =&gt; 11/17
+coffreo.com =&gt; samuel.lemoine@yahoo.com 8/18 
+facebook.com =&gt; 7/17
+yahoo.com =&gt; 8/17
+9gag =&gt; 9gag14.osef.osef@xoxy.net 12/14
+spamgourmet.net
+    leno.dalton =&gt; 4/17
+    samuel.lemoine =&gt; 6/17
+swdestinydb =&gt; 
+starwarsdestinyfr.forumactif.com =&gt; 7/17
+steam =&gt; lenopgm 4/18
+humble bundle =&gt; 4/18 humble.osef.osef@xoxy.net
+ameli =&gt; 06062016
+    =&gt; 2 88 06 49 007 351 08 / 14737567
+CAF =&gt; 1469221 06062016
+IZY =&gt; http://dpparis.ozyclub.eu/?p=435 =&gt; 001368 / date de naissance JJMMAAAA
+ants.gouv.fr =&gt; G 2/18
+ulule =&gt; 3/18
+myedenred =&gt; E 3/18 edenred.s.lemoine@xoxy.net
+NGE =&gt; 3/17
+natixis =&gt; natixis.s.lemoine@xoxy.net n° entreprise 06962 code serveur 14290097 mdp:00xxxxxx où xxxxxx=n°troll MH
+romaricbriand.fr/forum =&gt; romaricbriand.osef.osef@xoxy.net 6/18
+paypal =&gt; &lt;mail yahoo&gt;
+mondialrelay =&gt; samuel.lemoine@yahoo.com 11/17
+reddit =&gt; osefosefosef 9/18
+untap.in =&gt; leno 7/18
+bandai =&gt; bandai.s.lemoine@xoxy.net 9/18 /!\ PASSWORD : pas de carac spéciaux (remplacés par &quot;_&quot;) https://global.carddass.com/club/fr/bcc/menus
+caf.fr =&gt; caf.fr 1469221 / 06062016
+AON =&gt; https://monportailsante.aon.fr/aonadp/ 9872631 / 10/18 mais '=' remplacé par '+'
+https://aude.ausy.fr/ =&gt; 11/18
+http://www.mentalonews.com        mentalo.osef.osef@xoxy.net        11/18
+https://github.com/dashboard        lenopgm 12/18
+macif          13229934 12/18
+https://ceausy.kadeosconnect.com/avantage/       kadeos.s.lemoine@xoxy.net 12/18
+```
+</pre>
 </div>
 <div created="20190115164338542" modified="20190116083632879" tags="todo prep" title="Resilience">
 <pre>* or physique https://www.resilience-urbaine.com/survivalisme-resilience/or-argent-stocker-metaux-precieux/
@@ -9583,6 +9645,14 @@ A 21 ans j’ai choppé un molluscum contagiosum en couchant avec une fille renc
 
 En gros j’avais des mini verrues sur le pubis et la base de la verge qui étaient très inesthétiques et contagieuses pour mes futures partenaires. A l’époque mon père à qui je m’était confié a été hyper empathique, il m’a amené chez le dermato qui m’a grillé toutes les verrues à l’azote liquide. Il a fallu deux séances intenses pour tout faire disparaitre et que ça ne revienne plus. J’en rigole aujourd’hui mais ce fut assez douloureux.</pre>
 </div>
+<div created="20190130144237309" modified="20190130144449061" tags="" title="Todo">
+<pre>* inscription école Emma
+* baptème Emma
+* préparation vacances Verino
+
+* recherche appart'/maison
+* utilisation formation continue CPF</pre>
+</div>
 <div created="20190108085325311" modified="20190124154927825" tags="todo" title="Week">
 <pre>* todo
 * http://catavatar.ml/
@@ -9605,9 +9675,11 @@ https://www.hacking-social.com/2018/07/28/pdf-la-pleine-conscience-de-la-mort/
 * https://fr.wikipedia.org/wiki/Affaire_des_poisons
 </pre>
 </div>
-<div created="20190110133143078" modified="20190123163058924" tags="markups" title="youtube">
+<div created="20190110133143078" modified="20190129144625391" tags="markups" title="youtube">
 <pre>* inside Jamel Comedy club :  https://www.youtube.com/results?search_query=inside+jamel+comedy+club
 * l'émifion : https://www.youtube.com/results?search_query=l%27%C3%A9mifion
+* JTerre : https://www.youtube.com/channel/UCDoKG5pBrK3XYntCEGal2-w/videos
+* Nicolas Meyrieux : https://www.youtube.com/user/NicolasMeyrieux/videos
 
 ! ''High quality''
 * L'espace des sciences : https://www.youtube.com/user/Espacedessciences/videos
