--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -153,6 +153,8 @@ Error message and password prompt
 
 <li>$:/state/ShowPaletteEditor</li>
 
+<li>$:/state/tab--1498284803</li>
+
 <li>$:/state/tab--1963855381</li>
 
 <li>$:/state/tab--2112689675</li>
@@ -164,6 +166,8 @@ Error message and password prompt
 <li>$:/state/tab/sidebar--595412856</li>
 
 <li>$:/StoryList</li>
+
+<li>$:/temp/advancedsearch</li>
 
 <li>$:/temp/info-plugin</li>
 
@@ -182,6 +186,8 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/vanilla/metrics/tiddlerwidth</li>
 
 <li>$:/view</li>
+
+<li>Books</li>
 
 <li>dev ideas</li>
 
@@ -9116,6 +9122,9 @@ Error message and password prompt
 <div created="20190108085015148" modified="20190108085029019" title="$:/state/ShowPaletteEditor">
 <pre>no</pre>
 </div>
+<div created="20190131165208354" modified="20190131165208354" title="$:/state/tab--1498284803">
+<pre>$:/core/ui/AdvancedSearch/Standard</pre>
+</div>
 <div created="20190108084900836" modified="20190108085042919" title="$:/state/tab--1963855381">
 <pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
@@ -9131,8 +9140,11 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190111131054064" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div list="Todo pw Home" title="$:/StoryList">
+<div created="20190130155423695" list="Week Books Todo pw Home" modified="20190131165736922" title="$:/StoryList">
 <pre></pre>
+</div>
+<div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
+<pre>book</pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
 <pre>{
@@ -9188,7 +9200,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20190124154856659" title="$:/temp/search">
+<div created="20190114084246125" modified="20190131165226381" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
@@ -9314,6 +9326,81 @@ Error message and password prompt
 </div>
 <div created="20190108084902699" modified="20190108084918227" title="$:/view">
 <pre>classic</pre>
+</div>
+<div created="20190131165226977" modified="20190131165330180" tags="epub" title="Books">
+<pre>
+```
+    misc:
+        - Geoffrey Borne : Hacker Citizen
+        - Flore Vasseur :
+            - En bande organisée
+            - Comment j'ai liquidé le siècle
+    François Horn:
+        - Joe Haldeman : The Forever War
+        - Poul Anderson : Tau Zéro
+        - Dan Simmons : 
+            - Hyperion
+            - The Fall of Hyperion
+            - Endymion
+            - The Rise of Endymion
+        - Yuval Noah Harari :
+            - Sapiens A Brief History of Humankind
+            - Homo Deus A Brief History of Tomorrow
+    Virginie Vota:
+        - Les deux patries - Jean de Viguerie
+        - ADRIEN ABAUZIT - La France divisée contre elle-même
+    JTerre:
+        - Guillaume Pitron : La guerre des métaux rares: La face cachée de la transition énergétique et numérique
+    DemosKratos:
+        - Bourdieu - la reproduction sociale
+        - Pierre Rimbert
+        - Frédéric Lordon
+        - Paul Ariès
+    Esparbec:
+        - le goût du péché
+        - la jument
+        - Walter - My Secret Life
+        - Confession sexuelle d'un anonyme russe
+        - Anaïs Nin
+    Stéphane Rose:
+        - Tom Wolfe - The Bonfire of the Vanities
+        - Esparbec - La Pharmacienne (et d'autres)
+        - John Steinbeck - East of Eden
+        - Jean-Emmanuel Combe - La voix de l'inconscient
+        - Stéphane Rose - Pourvu qu'elle soit rousse
+    Nigel Findley:
+        - 2XS 
+        - Shadowplay 
+        - Lone Wolf 
+        - House of the Sun 
+    étienne chouard:
+        - Peter Gelderloos, Comment la non-violence protège l'état
+    laurent obertone:
+        - la france interdite
+        - la france big brother +++
+        - guerrilla
+        - ouvrons les yeux
+        - le dibale du ciel
+    hervé ryssen
+    kémi séba:
+        - Malcolm X A Life of Reinvention
+        - Le Consciencisme, Kwame Nkrumah
+        - Les Damnés de la Terre, Frantz Fanon
+        - Message to the Blackman in America, Elijah Muhammad
+        - Ainsi parlait Zarathoustra, Nietzsche
+    schneiderman:
+        - l'étrange défaite, mark bloch
+        - mémoires de churchill
+    Alexei Pouchkiv, sénateur russe:
+        - Munich, Robert Harris
+        - Soumission, Houellebecq
+    Hacking social:
+        - Bourvois
+        - Salvini
+        - Nicolas Guéguen - Psychologie de la soumission et de la manipulation
+
+```
+</pre>
 </div>
 <div created="20190108110103262" modified="20190108132839937" tags="todo dev" title="dev ideas" type="">
 <pre>* file sorter / duplicate hunter
@@ -9645,18 +9732,32 @@ A 21 ans j’ai choppé un molluscum contagiosum en couchant avec une fille renc
 
 En gros j’avais des mini verrues sur le pubis et la base de la verge qui étaient très inesthétiques et contagieuses pour mes futures partenaires. A l’époque mon père à qui je m’était confié a été hyper empathique, il m’a amené chez le dermato qui m’a grillé toutes les verrues à l’azote liquide. Il a fallu deux séances intenses pour tout faire disparaitre et que ça ne revienne plus. J’en rigole aujourd’hui mais ce fut assez douloureux.</pre>
 </div>
-<div created="20190130144237309" modified="20190130144449061" tags="" title="Todo">
-<pre>* inscription école Emma
+<div created="20190130144237309" modified="20190131092631522" tags="" title="Todo">
+<pre>* renouvellement vignette NGE : jusqu'au 31 mars 2019
+* inscription école Emma
 * baptème Emma
 * préparation vacances Verino
 
 * recherche appart'/maison
 * utilisation formation continue CPF</pre>
 </div>
-<div created="20190108085325311" modified="20190124154927825" tags="todo" title="Week">
+<div created="20190108085325311" modified="20190131165810873" tags="todo" title="Week">
 <pre>* todo
 * http://catavatar.ml/
 * Tucker &amp; Dale vs. Evil
+
+* https://www.inpact-hardware.com/article/1015/cartes-sd-et-microsd-perdus-dans-jungle-sigles-on-vous-explique-tout
+* https://www.inpact-hardware.com/article/1017/marre-cles-usb-lentes-et-trop-faible-capacite-fabriquez-votre
+
+* https://www.youtube.com/watch?v=NL1TOe9Vy2I&amp;index=4&amp;list=PLcpyt5j2QoWQtcketw-p6LxHrecKKyNoL
+
+* EN	https://www.youtube.com/watch?v=aTJWHh44h5w / FR	https://www.youtube.com/watch?v=CzCVnx2V8TM
+https://www.youtube.com/watch?v=Y9_0KNHs9lI
+* https://www.youtube.com/user/ishafoundation
+* https://www.youtube.com/user/sadhguru/videos
+* https://www.youtube.com/watch?v=x-DcatOfdOI
+* https://www.youtube.com/watch?v=v7KQsS2kLM4
+
 
 ! Flow
 * https://www.hacking-social.com/2015/03/03/le-bonheur-nest-pas-celui-quon-nous-vend-la-preuve-par-le-flow/
@@ -9675,11 +9776,13 @@ https://www.hacking-social.com/2018/07/28/pdf-la-pleine-conscience-de-la-mort/
 * https://fr.wikipedia.org/wiki/Affaire_des_poisons
 </pre>
 </div>
-<div created="20190110133143078" modified="20190129144625391" tags="markups" title="youtube">
+<div created="20190110133143078" modified="20190131105747239" tags="markups" title="youtube">
 <pre>* inside Jamel Comedy club :  https://www.youtube.com/results?search_query=inside+jamel+comedy+club
 * l'émifion : https://www.youtube.com/results?search_query=l%27%C3%A9mifion
 * JTerre : https://www.youtube.com/channel/UCDoKG5pBrK3XYntCEGal2-w/videos
 * Nicolas Meyrieux : https://www.youtube.com/user/NicolasMeyrieux/videos
+* zap&amp;john : https://www.youtube.com/user/johnkungfu/playlists
+* https://www.youtube.com/watch?v=axmpxbtzSZY&amp;list=LLs9ng4UmdBMeJL3Ym-HMPhw
 
 ! ''High quality''
 * L'espace des sciences : https://www.youtube.com/user/Espacedessciences/videos
