--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9140,7 +9140,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190111131054064" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20190130155423695" list="Week Books Todo pw Home" modified="20190131165736922" title="$:/StoryList">
+<div created="20190201115954073" list="Week Todo Home" modified="20190201153739742" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9328,8 +9328,7 @@ Error message and password prompt
 <pre>classic</pre>
 </div>
 <div created="20190131165226977" modified="20190131165330180" tags="epub" title="Books">
-<pre>
-```
+<pre>```
     misc:
         - Geoffrey Borne : Hacker Citizen
         - Flore Vasseur :
@@ -9620,8 +9619,7 @@ NB : Nous vous adresserons un devis séparé pour la livraison. Vous pouvez auss
 01 42 12 80 84.</pre>
 </div>
 <div created="20190130144059269" modified="20190130144212487" tags="pw" title="pw">
-<pre>
-```
+<pre>```
 impots.gouv.fr =&gt; 1200125072181 / i 5/17
 moncompteactivite.gouv.fr =&gt; 184014410977526 M12/18    cf https://intra.ausy.fr/publish/universite/Guide%20d'utilisation%20Consultant.pdf
 gog.com =&gt; 3/17 gog13.o.osef@xoxy.net (aussi 12/18 gog.leno.osef@xoxy.net  mais inutile)
@@ -9741,16 +9739,25 @@ En gros j’avais des mini verrues sur le pubis et la base de la verge qui étai
 * recherche appart'/maison
 * utilisation formation continue CPF</pre>
 </div>
-<div created="20190108085325311" modified="20190131165810873" tags="todo" title="Week">
-<pre>* todo
+<div created="20190108085325311" modified="20190201155125598" tags="todo" title="Week">
+<pre>! 1
+* todo
 * http://catavatar.ml/
 * Tucker &amp; Dale vs. Evil
+* Optimistan / optimistes sans frontière / la ligue des optimistes du royaume libre de belgique https://www.youtube.com/watch?v=vvdHMp2Wu44 / https://www.liguedesoptimistes.fr/idees/ / http://owb.optimistan.org/ / http://optimistan.org/
+* Questiologie https://www.youtube.com/watch?v=R6YYiZVQMFg https://www.youtube.com/watch?v=uzYvwukgtgg https://www.youtube.com/watch?v=mOuzZEjDjR0
 
+! 2
+* Previously Unknown Tales Of Merlin And King Arthur Discovered Hidden In Medieval Texts https://www.iflscience.com/editors-blog/previously-unknown-tales-of-merlin-and-king-arthur-discovered-hidden-in-medieval-texts/
+
+! 3
 * https://www.inpact-hardware.com/article/1015/cartes-sd-et-microsd-perdus-dans-jungle-sigles-on-vous-explique-tout
 * https://www.inpact-hardware.com/article/1017/marre-cles-usb-lentes-et-trop-faible-capacite-fabriquez-votre
 
+! 4
 * https://www.youtube.com/watch?v=NL1TOe9Vy2I&amp;index=4&amp;list=PLcpyt5j2QoWQtcketw-p6LxHrecKKyNoL
 
+! 5
 * EN	https://www.youtube.com/watch?v=aTJWHh44h5w / FR	https://www.youtube.com/watch?v=CzCVnx2V8TM
 https://www.youtube.com/watch?v=Y9_0KNHs9lI
 * https://www.youtube.com/user/ishafoundation
